istio-oauth2-proxy-oidc/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2-proxy
  labels:
    istio-injection: enabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    istio-injection: enabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
